automatically convert to SLHA convention when calculate_spectrum is called

--- a/templates/two_scale_model_slha.cpp.in
+++ b/templates/two_scale_model_slha.cpp.in
@@ -49,7 +49,7 @@ void CLASSNAME::clear()
 void CLASSNAME::calculate_spectrum()
 {
    @ModelName@<Two_scale>::calculate_spectrum();
-   // convert_to_slha();
+   convert_to_slha();
 }
 
 void CLASSNAME::convert_to_slha()
