--- a/templates/two_scale_model.hpp.in
+++ b/templates/two_scale_model.hpp.in
@@ -23,6 +23,9 @@
  * @brief contains class for model with routines needed to solve boundary
  *        value problem using the two_scale solver by solvingt EWSB
  *        and determine the pole masses and mixings
+ *
+ * This file was generated at @DateAndTime@ with FlexibleSUSY
+ * @FlexibleSUSYVersion@ and SARAH @SARAHVersion@ .
  */
 
 #ifndef @ModelName@_TWO_SCALE_H
