adding cctor for SLHA model wrapper class
The cctor does a conversion to SLHA automatically.

--- a/templates/two_scale_model_slha.cpp.in
+++ b/templates/two_scale_model_slha.cpp.in
@@ -36,6 +36,18 @@ CLASSNAME::@ModelName@_slha(const @ModelName@_input_parameters& input_)
 {
 }
 
+/**
+ * Copy constructor.  Copies from base class (two-scale model class in
+ * BPMZ convention) and converts parameters to SLHA.
+ *
+ * @param model_ model class in BPMZ convention
+ */
+CLASSNAME::@ModelName@_slha(const @ModelName@<Two_scale>& model_)
+   : MSSM<Two_scale>(model_)
+{
+   convert_to_slha();
+}
+
 CLASSNAME::~@ModelName@_slha()
 {
 }
