--- a/templates/run_cmd_line.cpp.in
+++ b/templates/run_cmd_line.cpp.in
@@ -94,16 +94,10 @@ int main(int argc, char* argv[])
    const bool error = problems.have_problem();
 
    // SLHA output
-   @ModelName@_slha_io slha_io;
-   slha_io.set_spinfo(problems);
-   slha_io.set_sminputs(oneset);
-   slha_io.set_minpar(input);
-   slha_io.set_extpar(input);
-   if (!error) {
-      slha_io.set_spectrum(model);
-      slha_io.set_extra(model);
-   }
-   slha_io.write_to_stream(std::cout);
+   SLHAea::Coll slhaea;
+   @ModelName@_slha_io::fill_slhaea(slhaea, model, oneset);
+
+   std::cout << slhaea;
 
    // // alternative output
    // if (error) {
