--- a/templates/run_cmd_line.cpp.in
+++ b/templates/run_cmd_line.cpp.in
@@ -91,8 +91,6 @@ int main(int argc, char* argv[])
    const Problems<@ModelName@_info::NUMBER_OF_PARTICLES>& problems
       = spectrum_generator.get_problems();
 
-   const bool error = problems.have_problem();
-
    // SLHA output
    SLHAea::Coll slhaea;
    @ModelName@_slha_io::fill_slhaea(slhaea, model, oneset);
@@ -100,7 +98,7 @@ int main(int argc, char* argv[])
    std::cout << slhaea;
 
    // // alternative output
-   // if (error) {
+   // if (problems.have_problem()) {
    //    cout << problems << '\n';
    // } else {
    //    cout << std::setw(12) << std::left << "M@HiggsBoson_0@/GeV" << ' '
