make SLHA_io class accept a model class in SLHA format
I.e. the conversion from BPMZ to SLHA is now done externally.

--- a/templates/run.cpp.in
+++ b/templates/run.cpp.in
@@ -93,8 +93,7 @@ int main(int argc, const char* argv[])
 
    spectrum_generator.run(oneset, input);
 
-   const @ModelName@<algorithm_type>& model
-      = spectrum_generator.get_model();
+   const @ModelName@_slha<algorithm_type> model(spectrum_generator.get_model());
    const Problems<@ModelName@_info::NUMBER_OF_PARTICLES>& problems
       = spectrum_generator.get_problems();
 
