--- a/templates/slha_io.hpp.in
+++ b/templates/slha_io.hpp.in
@@ -21,7 +21,7 @@
 #ifndef @ModelName@_SLHA_IO_H
 #define @ModelName@_SLHA_IO_H
 
-#include "@ModelName@_two_scale_model.hpp"
+#include "@ModelName@_two_scale_model_slha.hpp"
 #include "@ModelName@_info.hpp"
 #include "@ModelName@_physical.hpp"
 #include "slha_io.hpp"
@@ -55,16 +55,17 @@ public:
 
    void fill(QedQcd& qedqcd) const { slha_io.fill(qedqcd); }
    void fill(@ModelName@_input_parameters&) const;
-   template <class T> void fill(@ModelName@<T>&) const;
+   template <class T> void fill(@ModelName@_slha<T>&) const;
    void fill(Spectrum_generator_settings&) const;
    double get_input_scale() const;
    double get_parameter_output_scale() const;
    const SLHA_io& get_slha_io() const { return slha_io; }
    void read_from_file(const std::string&);
    void set_extpar(const @ModelName@_input_parameters&);
-   template <class T> void set_extra(const @ModelName@<T>&);
+   template <class T> void set_extra(const @ModelName@_slha<T>&);
    void set_minpar(const @ModelName@_input_parameters&);
    void set_sminputs(const softsusy::QedQcd&);
+   template <class T> void set_spectrum(const @ModelName@_slha<T>&);
    template <class T> void set_spectrum(const @ModelName@<T>&);
    void set_spinfo(const Problems<@ModelName@_info::NUMBER_OF_PARTICLES>&);
    void write_to_file(const std::string&);
@@ -77,7 +78,7 @@ public:
    static void convert_to_slha_convention(@ModelName@_physical&);
 
    template <class T>
-   static void fill_slhaea(SLHAea::Coll&, const @ModelName@<T>&, const QedQcd& qedqcd);
+   static void fill_slhaea(SLHAea::Coll&, const @ModelName@_slha<T>&, const QedQcd& qedqcd);
 
 private:
    SLHA_io slha_io; ///< SLHA io class
@@ -86,10 +87,10 @@ private:
 
    void set_mass(const @ModelName@_physical&, bool);
    void set_mixing_matrices(const @ModelName@_physical&, bool);
-   template <class T> void set_model_parameters(const @ModelName@<T>&);
+   template <class T> void set_model_parameters(const @ModelName@_slha<T>&);
    double read_scale() const;
-   template <class T> void fill_drbar_parameters(@ModelName@<T>&) const;
-   template <class T> void fill_physical(@ModelName@<T>&) const;
+   template <class T> void fill_drbar_parameters(@ModelName@_slha<T>&) const;
+   template <class T> void fill_physical(@ModelName@_slha<T>&) const;
 };
 
 /**
@@ -97,7 +98,7 @@ private:
  * SLHA output file.
  */
 template <class T>
-void @ModelName@_slha_io::fill(@ModelName@<T>& model) const
+void @ModelName@_slha_io::fill(@ModelName@_slha<T>& model) const
 {
    fill_drbar_parameters(model);
    fill_physical(model);
@@ -107,7 +108,7 @@ void @ModelName@_slha_io::fill(@ModelName@<T>& model) const
  * Reads DR-bar parameters from a SLHA output file.
  */
 template <class T>
-void @ModelName@_slha_io::fill_drbar_parameters(@ModelName@<T>& model) const
+void @ModelName@_slha_io::fill_drbar_parameters(@ModelName@_slha<T>& model) const
 {
 @readLesHouchesOutputParameters@
 
@@ -118,13 +119,13 @@ void @ModelName@_slha_io::fill_drbar_parameters(@ModelName@<T>& model) const
  * Reads pole masses and mixing matrices from a SLHA output file.
  */
 template <class T>
-void @ModelName@_slha_io::fill_physical(@ModelName@<T>& model) const
+void @ModelName@_slha_io::fill_physical(@ModelName@_slha<T>& model) const
 {
 @readLesHouchesPhyicalParameters@
 }
 
 template <class T>
-void @ModelName@_slha_io::fill_slhaea(SLHAea::Coll& slhaea, const @ModelName@<T>& model, const QedQcd& qedqcd)
+void @ModelName@_slha_io::fill_slhaea(SLHAea::Coll& slhaea, const @ModelName@_slha<T>& model, const QedQcd& qedqcd)
 {
    @ModelName@_slha_io slha_io;
    const @ModelName@_input_parameters& input = model.get_input();
@@ -150,7 +151,7 @@ void @ModelName@_slha_io::fill_slhaea(SLHAea::Coll& slhaea, const @ModelName@<T>
  * @param model model class
  */
 template <class T>
-void @ModelName@_slha_io::set_model_parameters(const @ModelName@<T>& model)
+void @ModelName@_slha_io::set_model_parameters(const @ModelName@_slha<T>& model)
 {
 @writeSLHAModelParametersBlocks@
 }
@@ -161,10 +162,9 @@ void @ModelName@_slha_io::set_model_parameters(const @ModelName@<T>& model)
  * @param model model class
  */
 template <class T>
-void @ModelName@_slha_io::set_extra(const @ModelName@<T>& model)
+void @ModelName@_slha_io::set_extra(const @ModelName@_slha<T>& model)
 {
-   @ModelName@_physical physical(model.get_physical());
-   convert_to_slha_convention(physical);
+   const @ModelName@_physical physical(model.get_physical_slha());
 
 @writeExtraSLHAOutputBlock@
 }
@@ -173,14 +173,25 @@ void @ModelName@_slha_io::set_extra(const @ModelName@<T>& model)
  * Stores the model (DR-bar) parameters, masses and mixing matrices in
  * the SLHA object.
  *
- * @param model model class
+ * @param model model class in BPMZ convention
  */
 template <class T>
 void @ModelName@_slha_io::set_spectrum(const @ModelName@<T>& model)
 {
-   @ModelName@_physical physical(model.get_physical());
-   convert_to_slha_convention(physical);
+   const @ModelName@_slha<T> model_slha(model);
+   set_spectrum(model_slha);
+}
 
+/**
+ * Stores the model (DR-bar) parameters, masses and mixing matrices in
+ * the SLHA object.
+ *
+ * @param model model class in SLHA convention
+ */
+template <class T>
+void @ModelName@_slha_io::set_spectrum(const @ModelName@_slha<T>& model)
+{
+   const @ModelName@_physical physical(model.get_physical_slha());
    const bool write_sm_masses = model.do_calculate_sm_pole_masses();
 
    set_model_parameters(model);
