--- a/templates/run_cmd_line.cpp.in
+++ b/templates/run_cmd_line.cpp.in
@@ -86,7 +86,7 @@ int main(int argc, char* argv[])
 
    spectrum_generator.run(oneset, input);
 
-   const @ModelName@<algorithm_type>& model = spectrum_generator.get_model();
+   const @ModelName@_slha<algorithm_type> model(spectrum_generator.get_model());
    const @ModelName@_physical& pole_masses = model.get_physical();
    const Problems<@ModelName@_info::NUMBER_OF_PARTICLES>& problems
       = spectrum_generator.get_problems();
