extending SM model file
Yukawa couplings should be calculated automatically.
Set SUSY scale to value of SM vev v.

--- a/model_files/SM/FlexibleSUSY.m.in
+++ b/model_files/SM/FlexibleSUSY.m.in
@@ -1,15 +1,30 @@
 
 FSModelName = "@CLASSNAME@";
+FSEigenstates = SARAH`EWSB;
 
 (* SM input parameters *)
 
-MINPAR={ {1, LambdaIN} };
+MINPAR = { {1, LambdaIN} };
 
 EWSBOutputParameters = { mu2 };
 
-BoundaryLowScaleInput = {
-    {v, 2 MZDRbar / Sqrt[GUTNormalization[g1]^2 g1^2 + g2^2]},
+SUSYScale = v;
+
+SUSYScaleFirstGuess = 1000;
+
+SUSYScaleInput = {
     {\[Lambda], LambdaIN}
+};
+
+LowScale = SM[MZ];
+
+LowScaleFirstGuess = SM[MZ];
+
+LowScaleInput = {
+   {Yu, Automatic},
+   {Yd, Automatic},
+   {Ye, Automatic},
+   {v, 2 MZDRbar / Sqrt[GUTNormalization[g1]^2 g1^2 + g2^2]}
 };
 
 OnlyLowEnergyFlexibleSUSY = True;
