--- a/templates/info.hpp.in
+++ b/templates/info.hpp.in
@@ -34,6 +34,7 @@ namespace @ModelName@_info {
    extern const char* parameter_names[NUMBER_OF_PARAMETERS];
    extern const char* model_name;
    extern const bool is_low_energy_model;
+   extern const bool is_supersymmetric_model;
 
    void print(std::ostream&);
 }
