correct capitalization of ren. scheme

--- a/model_files/SM/FlexibleSUSY.m.in
+++ b/model_files/SM/FlexibleSUSY.m.in
@@ -34,7 +34,7 @@ InitialGuessAtLowScale = {
    {v, SM[vev]}
 };
 
-FSRenormalizationScheme = MSBar;
+FSRenormalizationScheme = MSbar;
 
 OnlyLowEnergyFlexibleSUSY = True;
 
