--- a/model_files/SM/FlexibleSUSY.m.in
+++ b/model_files/SM/FlexibleSUSY.m.in
@@ -34,6 +34,13 @@ InitialGuessAtLowScale = {
    {v, SM[vev]}
 };
 
+SMParticles = {
+    Electron, TopQuark, BottomQuark,
+    VectorP, VectorZ, VectorG, VectorW, Neutrino,
+    Hp, Ah, (* goldstones *)
+    hh (* Higgs *)
+};
+
 FSRenormalizationScheme = MSbar;
 
 OnlyLowEnergyFlexibleSUSY = True;
