add charged and CP-Odd Higgs to list of SM particles (goldstones)

--- a/model_files/NSM/FlexibleSUSY.m.in
+++ b/model_files/NSM/FlexibleSUSY.m.in
@@ -47,3 +47,11 @@ InitialGuessAtLowScale = {
 };
 
 OnlyLowEnergyFlexibleSUSY = True;
+
+FSRenormalizationScheme = MSbar;
+
+SMParticles = {
+    Electron, TopQuark, BottomQuark,
+    VectorP, VectorZ, VectorG, VectorW, Neutrino,
+    Hp, Ah (* goldstones *)
+};
