--- a/model_files/MSSMatMGUT/FlexibleSUSY.m.in
+++ b/model_files/MSSMatMGUT/FlexibleSUSY.m.in
@@ -30,12 +30,12 @@ HighScale = g1 == g2;
 
 HighScaleFirstGuess = 2.0 10^16;
 
-HighScaleInput={
+HighScaleInput = {
    {T[Ye], Aeij*Ye},
    {T[Yd], Adij*Ye},
    {T[Yu], Auij*Ye},
    {mHd2, mHd2IN},
-   {mHd2, mHu2IN},
+   {mHu2, mHu2IN},
    {mq2, LHInput[mq2]},
    {ml2, LHInput[ml2]},
    {md2, LHInput[md2]},
