correcting definition of Higgs mixing angle

--- a/model_files/CMSSMNoFV/FlexibleSUSY.m.in
+++ b/model_files/CMSSMNoFV/FlexibleSUSY.m.in
@@ -1,5 +1,6 @@
 
 FSModelName = "@CLASSNAME@";
+FSEigenstates = SARAH`EWSB;
 
 (* CMSSM input parameters *)
 
@@ -66,6 +67,13 @@ InitialGuessAtHighScale = {
 
 UseHiggs2LoopMSSM = True;
 EffectiveMu = \[Mu];
+
+PotentialLSPParticles = { Chi, Sv, Su, Sd, Se, Cha, Glu };
+
+DefaultPoleMassPrecision = MediumPrecision;
+HighPoleMassPrecision    = {hh, Ah, Hpm};
+MediumPoleMassPrecision  = {};
+LowPoleMassPrecision     = {};
 
 ExtraSLHAOutputBlocks = {
    {ALPHA, {{ArcSin[Pole[ZH[2,2]]]}}},
