--- a/model_files/CMSSM/FlexibleSUSY.m.in
+++ b/model_files/CMSSM/FlexibleSUSY.m.in
@@ -4,11 +4,13 @@ FSEigenstates = SARAH`EWSB;
 
 (* CMSSM input parameters *)
 
-MINPAR = { {1, m0},
-           {2, m12},
-           {3, TanBeta},
-           {4, Sign[\[Mu]]},
-           {5, Azero} };
+MINPAR = {
+    {1, m0},
+    {2, m12},
+    {3, TanBeta},
+    {4, Sign[\[Mu]]},
+    {5, Azero}
+};
 
 EWSBOutputParameters = { B[\[Mu]], \[Mu] };
 
@@ -22,7 +24,7 @@ HighScale = g1 == g2;
 
 HighScaleFirstGuess = 2.0 10^16;
 
-HighScaleInput={
+HighScaleInput = {
    {T[Ye], Azero*Ye},
    {T[Yd], Azero*Yd},
    {T[Yu], Azero*Yu},
@@ -74,7 +76,7 @@ MediumPoleMassPrecision  = {};
 LowPoleMassPrecision     = {};
 
 ExtraSLHAOutputBlocks = {
-   {ALPHA, {{ArcCos[Pole[ZH[1,2]]]}}},
+   {ALPHA, {{ArcSin[Pole[ZH[2,2]]]}}},
    {HMIX , {{1, \[Mu]},
             {2, vu / vd},
             {3, Sqrt[vu^2 + vd^2]},
