--- a/model_files/MSSM/FlexibleSUSY.m.in
+++ b/model_files/MSSM/FlexibleSUSY.m.in
@@ -4,13 +4,15 @@ FSEigenstates = SARAH`EWSB;
 
 (* CMSSM input parameters *)
 
-MINPAR = { {3, TanBeta},
-           {4, Sign[\[Mu]]}
+MINPAR = {
+    {3, TanBeta},
+    {4, Sign[\[Mu]]}
 };
 
-EXTPAR = { {0, Qin},
-           {21, mHd2IN},
-           {22, mHu2IN}
+EXTPAR = {
+    {0, Qin},
+    {21, mHd2IN},
+    {22, mHu2IN}
 };
 
 FSExtraInputParameters = {
@@ -44,7 +46,7 @@ HighScaleInput = {
    {me2, LHInput[me2]},
    {MassB, LHInput[MassB]},
    {MassWB,LHInput[MassWB]},
-   {MassG,LHInput[MassG]}
+   {MassG, LHInput[MassG]}
 };
 
 LowScale = SM[MZ];
@@ -83,7 +85,7 @@ MediumPoleMassPrecision  = {};
 LowPoleMassPrecision     = {};
 
 ExtraSLHAOutputBlocks = {
-   {ALPHA, {{ArcCos[Pole[ZH[1,2]]]}}},
+   {ALPHA, {{ArcSin[Pole[ZH[2,2]]]}}},
    {HMIX , {{1, \[Mu]},
             {2, vu / vd},
             {3, Sqrt[vu^2 + vd^2]},
