--- a/templates/spectrum_generator.hpp.in
+++ b/templates/spectrum_generator.hpp.in
@@ -115,10 +115,17 @@ void @ModelName@_spectrum_generator<T>::run(const QedQcd& oneset,
    high_scale_constraint.clear();
    susy_scale_constraint.clear();
    low_scale_constraint .clear();
+
+   // needed for constraint::initialize()
+   high_scale_constraint.set_model(&model);
+   susy_scale_constraint.set_model(&model);
+   low_scale_constraint .set_model(&model);
+
    high_scale_constraint.set_input_parameters(input);
    susy_scale_constraint.set_input_parameters(input);
    low_scale_constraint .set_input_parameters(input);
    low_scale_constraint .set_sm_parameters(oneset);
+
    high_scale_constraint.initialize();
    susy_scale_constraint.initialize();
    low_scale_constraint .initialize();
