--- a/templates/two_scale_susy_scale_constraint.cpp.in
+++ b/templates/two_scale_susy_scale_constraint.cpp.in
@@ -65,7 +65,7 @@ namespace flexiblesusy {
 
 void @ModelName@_susy_scale_constraint<Two_scale>::apply()
 {
-   assert(model && "Error: @ModelName@_susy_scale_constraint:"
+   assert(model && "Error: @ModelName@_susy_scale_constraint::apply():"
           " model pointer must not be zero");
 
    model->calculate_DRbar_masses();
@@ -109,12 +109,18 @@ void @ModelName@_susy_scale_constraint<Two_scale>::clear()
 
 void @ModelName@_susy_scale_constraint<Two_scale>::initialize()
 {
+   assert(model && "@ModelName@_susy_scale_constraint<Two_scale>::"
+          "initialize(): model pointer is zero.");
+
 @scaleGuess@
    scale = initial_scale_guess;
 }
 
 void @ModelName@_susy_scale_constraint<Two_scale>::update_scale()
 {
+   assert(model && "@ModelName@_susy_scale_constraint<Two_scale>::"
+          "update_scale(): model pointer is zero.");
+
 @calculateScale@
 @restrictScale@
 }
