rename models in the tests and the examples

--- a/templates/low_scale_spectrum_generator.hpp.in
+++ b/templates/low_scale_spectrum_generator.hpp.in
@@ -107,9 +107,15 @@ void @ModelName@_spectrum_generator<T>::run(const QedQcd& oneset,
 {
    susy_scale_constraint.clear();
    low_scale_constraint .clear();
+
+   // needed for constraint::initialize()
+   susy_scale_constraint.set_model(&model);
+   low_scale_constraint .set_model(&model);
+
    susy_scale_constraint.set_input_parameters(input);
    low_scale_constraint .set_input_parameters(input);
    low_scale_constraint .set_sm_parameters(oneset);
+
    susy_scale_constraint.initialize();
    low_scale_constraint .initialize();
 
