--- a/templates/two_scale_low_scale_constraint.hpp.in
+++ b/templates/two_scale_low_scale_constraint.hpp.in
@@ -38,7 +38,7 @@ template<>
 class @ModelName@_low_scale_constraint<Two_scale> : public Constraint<Two_scale> {
 public:
    @ModelName@_low_scale_constraint();
-   @ModelName@_low_scale_constraint(const @ModelName@_input_parameters&, const QedQcd&);
+   @ModelName@_low_scale_constraint(@ModelName@<Two_scale>*, const @ModelName@_input_parameters&, const QedQcd&);
    virtual ~@ModelName@_low_scale_constraint();
    virtual void apply();
    virtual double get_scale() const;
