--- a/templates/two_scale_susy_scale_constraint.cpp.in
+++ b/templates/two_scale_susy_scale_constraint.cpp.in
@@ -51,9 +51,11 @@ namespace flexiblesusy {
 {
 }
 
-@ModelName@_susy_scale_constraint<Two_scale>::@ModelName@_susy_scale_constraint(const @ModelName@_input_parameters& inputPars_)
+@ModelName@_susy_scale_constraint<Two_scale>::@ModelName@_susy_scale_constraint(
+   @ModelName@<Two_scale>* model_,
+   const @ModelName@_input_parameters& inputPars_)
    : Constraint<Two_scale>()
-   , model(0)
+   , model(model_)
    , inputPars(inputPars_)
 {
    initialize();
