--- a/templates/two_scale_low_scale_constraint.cpp.in
+++ b/templates/two_scale_low_scale_constraint.cpp.in
@@ -104,7 +104,7 @@ double @ModelName@_low_scale_constraint<Two_scale>::get_initial_scale_guess() co
 
 void @ModelName@_low_scale_constraint<Two_scale>::set_model(Two_scale_model* model_)
 {
-   model = cast_model<@ModelName@<Two_scale> >(model_);
+   model = cast_model<@ModelName@<Two_scale>*>(model_);
 }
 
 void @ModelName@_low_scale_constraint<Two_scale>::set_input_parameters(const @ModelName@_input_parameters& inputPars_)
