--- a/templates/two_scale_susy_scale_constraint.cpp.in
+++ b/templates/two_scale_susy_scale_constraint.cpp.in
@@ -94,7 +94,7 @@ double @ModelName@_susy_scale_constraint<Two_scale>::get_initial_scale_guess() c
 
 void @ModelName@_susy_scale_constraint<Two_scale>::set_model(Two_scale_model* model_)
 {
-   model = cast_model<@ModelName@<Two_scale> >(model_);
+   model = cast_model<@ModelName@<Two_scale>*>(model_);
 }
 
 void @ModelName@_susy_scale_constraint<Two_scale>::set_input_parameters(const @ModelName@_input_parameters& inputPars_)
