Revert "renormalize SM in DR-bar scheme for easy matching to SUSY model"
This reverts commit 2344bf6f39ec02174057c465bd0d3ed504612e8e.

Renormalize the Standard Model in the MSbar scheme.

--- a/model_files/SM/FlexibleSUSY.m.in
+++ b/model_files/SM/FlexibleSUSY.m.in
@@ -41,6 +41,8 @@ SMParticles = {
     hh (* Higgs *)
 };
 
+FSRenormalizationScheme = MSbar;
+
 OnlyLowEnergyFlexibleSUSY = True;
 
 SARAH`ParameterDefinitions = Append[
