--- a/templates/slha_io.hpp.in
+++ b/templates/slha_io.hpp.in
@@ -92,7 +92,7 @@ private:
    void set_mass(const @ModelName@_physical&, bool);
    void set_mixing_matrices(const @ModelName@_physical&, bool);
    template <class T> void set_model_parameters(const @ModelName@_slha<T>&);
-   template <class T> void set_ckm(const @ModelName@<T>&);
+   template <class T> void set_ckm(const @ModelName@_slha<T>&);
    void set_ckm(const Eigen::Matrix<std::complex<double>,3,3>&, const Eigen::Matrix<std::complex<double>,3,3>&, double);
    double read_scale() const;
    template <class T> void fill_drbar_parameters(@ModelName@_slha<T>&) const;
@@ -218,7 +218,7 @@ void @ModelName@_slha_io::set_spectrum(const @ModelName@_slha<T>& model)
 }
 
 template <class T>
-void @ModelName@_slha_io::set_ckm(const @ModelName@<T>& model)
+void @ModelName@_slha_io::set_ckm(const @ModelName@_slha<T>& model)
 {
    Eigen::Matrix<std::complex<double>,3,3> V_u(MODELPARAMETER(@LeftUpMixingMatrix@));
    Eigen::Matrix<std::complex<double>,3,3> V_d(MODELPARAMETER(@LeftDownMixingMatrix@));
