--- a/templates/two_scale_model_slha.hpp.in
+++ b/templates/two_scale_model_slha.hpp.in
@@ -62,6 +62,7 @@ public:
 private:
    @ModelName@_physical physical_slha; ///< contains the pole masses and mixings in slha convention
 @slhaYukawaDef@
+@slhaFerimonMixingMatricesDef@
 
    void convert_yukawa_couplings_to_slha();
 };
