converting trilinear couplings

--- a/templates/two_scale_model_slha.cpp.in
+++ b/templates/two_scale_model_slha.cpp.in
@@ -69,6 +69,8 @@ void CLASSNAME::convert_to_slha()
    physical_slha = get_physical();
 
    convert_yukawa_couplings_to_slha();
+   convert_trilinear_couplings_to_slha();
+
    @ModelName@_slha_io::convert_to_slha_convention(physical_slha);
 }
 
@@ -78,6 +80,14 @@ void CLASSNAME::convert_to_slha()
 void CLASSNAME::convert_yukawa_couplings_to_slha()
 {
 @convertYukawaCouplingsToSLHA@
+}
+
+/**
+ * Convert trilinear couplings to SLHA convention
+ */
+void CLASSNAME::convert_trilinear_couplings_to_slha()
+{
+@convertTrilinearCouplingsToSLHA@
 }
 
 const @ModelName@_physical& CLASSNAME::get_physical_slha() const
