--- a/templates/two_scale_model_slha.hpp.in
+++ b/templates/two_scale_model_slha.hpp.in
@@ -47,7 +47,8 @@ public:
    virtual ~@ModelName@_slha();
 
    virtual void clear();
-   void convert_to_slha(); ///< converts pole masses to SLHA convention
+   void convert_to_slha(); ///< converts pole masses and couplings to SLHA convention
+   static void convert_to_slha(@ModelName@_physical&); ///< converts pole masses to SLHA convention
    const @ModelName@_physical& get_physical_slha() const; ///< returns pole masses to SLHA convention
    @ModelName@_physical& get_physical_slha(); ///< returns pole masses to SLHA convention
 
