--- a/templates/two_scale_model_slha.hpp.in
+++ b/templates/two_scale_model_slha.hpp.in
@@ -49,6 +49,7 @@ public:
    virtual void clear();
    void convert_to_slha(); ///< converts pole masses and couplings to SLHA convention
    static void convert_to_slha(@ModelName@_physical&); ///< converts pole masses to SLHA convention
+   const Eigen::Matrix<std::complex<double>,3,3>& get_ckm_matrix() const { return ckm; }
    const @ModelName@_physical& get_physical_slha() const; ///< returns pole masses to SLHA convention
    @ModelName@_physical& get_physical_slha(); ///< returns pole masses to SLHA convention
 
@@ -65,11 +66,13 @@ public:
 
 private:
    @ModelName@_physical physical_slha; ///< contains the pole masses and mixings in slha convention
+   Eigen::Matrix<std::complex<double>,3,3> ckm;
 @slhaYukawaDef@
 @slhaFerimonMixingMatricesDef@
 @slhaTrilinearCouplingsDef@
 @slhaSoftSquaredMassesDef@
 
+   void calculate_ckm_matrix();
    void convert_yukawa_couplings_to_slha();
    void convert_trilinear_couplings_to_slha();
    void convert_soft_squared_masses_to_slha();
